--- a/views/duty-handover-view.ejs
+++ b/views/duty-handover-view.ejs
@@ -1,5 +1,17 @@
 <%- include("partials/header") %> <%- include("partials/navbar") %>
 
+<%
+
+var submitDutyHandover = "";
+
+if(role === 'Admin'){
+    submitDutyHandover = "d-none";
+}else {
+    submitDutyHandover = "";
+}
+
+%>
+
 <div class="content">
   <nav class="mb-2" aria-label="breadcrumb">
     <ol class="breadcrumb mb-0">
@@ -24,7 +36,7 @@
         </div>
         <div class="col-auto">
           <a
-            class="btn btn-primary px-5"
+            class="btn btn-primary px-5 <%= submitDutyHandover %>"
             href="/duty-handover/submit?rid=<%= rid %>"
             ><i class="fa-solid fa-plus me-2"></i>Add new handover</a
           >
