--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -1,5 +1,19 @@
 <%- include("partials/header") %> <%- include("partials/navbar") %>
 
+<%
+
+var addFiles = "";
+
+if(role === 'Admin'){
+    addFiles = "d-none";
+}else if(role === 'Head Shift'){
+    addFiles = "d-none";
+}else {
+    addFiles = "";
+}
+
+%>
+
 <div class="content px-0 pt-9">
   <div class="row g-0">
     <div class="col-12 col-xxl-9 px-0 bg-soft">
@@ -11,7 +25,7 @@
               <li class="breadcrumb-item active">Reports</li>
               <li class="breadcrumb-item active">Patrol Report</li>
               <li class="breadcrumb-item active">Shift Member</li>
-              <li class="breadcrumb-item active"><a role="button" class="" data-bs-toggle="modal" data-bs-target="#modalVideo"><%= patrolReport.location %></a></li>
+              <li class="breadcrumb-item active"><%= patrolReport.location %></li>
             </ol>
           </nav>
           <div class="d-flex justify-content-between row g-1">
@@ -63,12 +77,21 @@
                     <div <% /* eslint-disable css-propertyvalueexpected */ %> class="progress-bar rounded-3" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:<%= progressReport %>%;"><%= progressReport %>%</div>
                   </div>
                 </div>
+
+                <div class="col-12 mb-4">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <video class="embed-responsive-item" width="100%" height="100%" autoplay muted>
+                      <source src="/video/vid2.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="container border border-300 p-4 ms-0 mb-5 rounded-3">
+        <div class="col-12 container border border-300 p-0 mb-5 rounded-3" style="margin: 0 auto;">
           <div class="col-12">
             <div class="container">
               <div class="row d-flex justify-content-center">
@@ -179,7 +202,7 @@
           </script>
 
           <div class="col-12">
-            <div id="chart" style="height: 450px;"></div>
+            <div id="chart" style="height: 450px; width: 100%;"></div>
           </div>
 
           <script>
@@ -330,7 +353,7 @@
             </div>
           </div>
           <% } %>
-          <div class="mt-1 mb-3">
+          <div class="mt-1 mb-3 <%= addFiles %>">
             <a role="button" class="btn btn-phoenix-primary bg-transparent border border-0 mx-2" id="addFiles" data-bs-toggle="modal" data-bs-target="#verticallyCentered">Add files +</a>
           </div>
         </div>
@@ -382,28 +405,6 @@
     </div>
   </div>
 </div>
-
-<div class="modal fade" id="modalVideo" tabindex="-1" aria-labelledby="verticallyCenteredModalLabel" aria-hidden="true" style="display: none">
-  <div class="modal-dialog modal-dialog-centered modal-lg modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="videoModalLabel">Chcekpoint Demonstration</h5>
-        <button class="btn p-1" type="button" data-bs-dismiss="modal" aria-label="Close">
-          <span class="fas fa-times fs--1"></span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="embed-responsive embed-responsive-16by9">
-          <video class="embed-responsive-item" width="100%" height="100%" autoplay muted>
-            <source src="/video/vid2.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 
 <!-- modal for upload files -->
 <div class="modal fade scrollbar-overlay" id="verticallyCentered" tabindex="-1" aria-labelledby="verticallyCenteredModalLabel" aria-hidden="true">
