--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -35,6 +35,8 @@
 <script src="/vendors/dropzone/dropzone.js"></script>
 <!-- datepicker -->
 <script src="/assets/js/flatpickr.js"></script>
+<!-- swiper -->
+<script src="/assets/vendors/swiper/swiper-bundle.min.js"></script>
 
 <script>
 
