--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -73,7 +73,7 @@ if(role === 'Admin'){
 
       <!-- Dashboard -->
       <li class="nav-item dropdown <%= mainNav1 %>">
-        <a class="nav-link lh-1" href="/duty-handover/view" role="button"><span
+        <a class="nav-link lh-1" href="/dashboard" role="button"><span
             class="uil fs-0 me-2 uil-chart"></span>Dashboard</a>
       </li>
 
