Done case part on admin

--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -93,7 +93,7 @@ if(role === 'Admin'){
 
         <div class="col-12 container border border-300 p-0 mb-5 rounded-3" style="margin: 0 auto;">
           <div class="col-12">
-            <div class="container">
+            <div class="container p-2">
               <div class="row d-flex justify-content-center">
                 <% 
                       var display = "";
