--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -559,7 +559,7 @@
   <div class="row g-1 border border-300 rounded-3 p-4 mb-5">
     <div class="col-12 col-xxl-6 vh-50">
       <h3>Shift Member Patrol</h3>
-      <p class="text-700 fs-1">Example</p>
+      <p class="text-700 fs-1">Display patrol activity for this month</p>
 
       <!-- Container for ECharts chart -->
       <div id="chartShiftMember" style="width: 100%; height: 90%;"></div>
@@ -622,7 +622,7 @@
 
     <div class="col-12 col-xxl-6 vh-50">
       <h3>Patrol Unit</h3>
-      <p class="text-700 fs-1">Example</p>
+      <p class="text-700 fs-1">Display patrol activity for this month</p>
 
       <!-- Container for ECharts chart -->
       <div id="chartPatrolUnit" style="width: 100%; height: 90%;"></div>
@@ -683,7 +683,7 @@
       </script>
     </div>
 
-    <div class="col-12 vh-50">
+    <div class="col-12 vh-50 d-none">
       <h3>Case Report</h3>
       <p class="text-700 fs-1">Example</p>
     </div>
