Done mostly minor part

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
   <div class="mt-4">
     <div class="row g-2">
       <!-- card body reports -->
-      <div class="col-12 col-xl-10 order-1 order-xl-0">
+      <div class="col-12 col-xl-12 order-1 order-xl-0">
         <div class="mb-1">
           <div
             class="card shadow-none border border-300 my-4"
@@ -29,7 +29,7 @@
                     Reports
                   </h4>
                 </div>
-                <div class="col col-md-auto">
+                <div class="col col-md-auto d-none">
                   <nav
                     class="nav nav-underline justify-content-end doc-tab-nav align-items-center"
                     role="tablist"
@@ -93,7 +93,7 @@
                       data-bs-parent="#accordionExample"
                     >
                       <div class="accordion-body pt-0">
-                        <a href="/patrol-report/view"
+                        <a href="/shift-member/view"
                           ><strong>Visit to location patrol</strong></a
                         >
                         by submitting & viewing patrol report daily based on
@@ -138,30 +138,8 @@
         </div>
       </div>
 
-      <!-- navbody -->
-      <div class="col-12 col-xl-2">
-        <div class="position-sticky mt-xl-4" style="top: 80px">
-          <h5 class="lh-1">On this page</h5>
-          <hr class="text-300" />
-          <ul
-            class="nav nav-vertical flex-column doc-nav"
-            data-doc-nav="data-doc-nav"
-          >
-            <li class="nav-item">
-              <a class="nav-link" href="#reports">Reports</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#schedule">Schedule</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#social">Social</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
       <!-- card body schedule -->
-      <div class="col-12 col-xl-10 order-1 order-xl-0">
+      <div class="col-12 col-xl-12 order-1 order-xl-0">
         <div class="mb-1">
           <div
             class="card shadow-none border border-300 my-4"
@@ -179,7 +157,7 @@
                     Schedule
                   </h4>
                 </div>
-                <div class="col col-md-auto">
+                <div class="col col-md-auto d-none">
                   <nav
                     class="nav nav-underline justify-content-end doc-tab-nav align-items-center"
                     role="tablist"
@@ -254,7 +232,7 @@
       </div>
 
       <!-- card body social -->
-      <div class="col-12 col-xl-10 order-1 order-xl-0">
+      <div class="col-12 col-xl-12 order-1 order-xl-0">
         <div class="mb-1">
           <div
             class="card shadow-none border border-300 my-4"
@@ -272,7 +250,7 @@
                     Social
                   </h4>
                 </div>
-                <div class="col col-md-auto">
+                <div class="col col-md-auto d-none">
                   <nav
                     class="nav nav-underline justify-content-end doc-tab-nav align-items-center"
                     role="tablist"
