Added submit success and failed for shift member patrol submission

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -75,6 +75,7 @@
   <!-- echarts -->
   <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
